--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <div id="app">
+      <div class="cart">Cart: {{ cart }}</div>
+
        <div class="product-display">
             <div class="product-container">
                 <div class="product-image">
@@ -23,7 +25,15 @@
                   <p v-if="inStock > 10">In Stock</p>
                   <p v-else-if="inStock < 10 && inStock > 1">Almost of out</p>
                   <p v-else>Out of Stock</p>
-                    <!-- Info do Produto -->
+                  <ul>
+                    <li v-for="detail in details">
+                      {{ detail }}
+                    </li>
+                  </ul>
+                  <div v-for="variant in variants" :key="variant.id">
+                    {{variant.color}}
+                  </div>
+                  <button class="button">Add To Cart</button>
                 </div>
             </div>
        </div>
@@ -40,7 +50,9 @@
           return {
            product_title: ref("T-Shirt"),
             image: ref("./assets/images/t-shirt-blue.png"),
-            inStock: ref(0)
+            inStock: ref(0),
+            details: ['50% Cotton', '30% polyester', '20% wool'],
+            variants: [{id:1, color:'blue'}, {id:2, color:'green'}]
           };
         },
       }).mount("#app");
