--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
                       {{ detail }}
                     </li>
                   </ul>
-                  <div v-for="variant in variants" :key="variant.id">
+                  <!-- v-on: pode ser abreviado usando @ -->
+                  <div 
+                  v-for="variant in variants" 
+                  :key="variant.id"
+                  @mouseover="changeImage(variant.image)">
                     {{variant.color}}
                   </div>
-                  <button class="button" v-on:click="addToCart">Add To Cart</button>
+                  <button class="button" @click="addToCart">Add To Cart</button>
                 </div>
             </div>
        </div>
@@ -50,14 +54,21 @@
             cart.value += 1
           }
 
+          const image = ref("./assets/images/t-shirt-blue.png")
+          const changeImage = (variantImage) => {
+            image.value = variantImage
+          }
+
           return {
            product_title: ref("T-Shirt"),
-            image: ref("./assets/images/t-shirt-blue.png"),
+            image,
             inStock: ref(0),
             details: ['50% Cotton', '30% polyester', '20% wool'],
-            variants: [{id:1, color:'blue'}, {id:2, color:'green'}],
+            variants: [
+              {id:1, color:'blue', image: "./assets/images/t-shirt-blue.png"}, 
+              {id:2, color:'green', image: "./assets/images/t-shirt-green.png"}],
             cart,
-            addToCart
+            addToCart,changeImage
           };
         },
       }).mount("#app");
